Renamed the author

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
             <div class="copyright-bar bg-black footer">
                 <div class="container">
-                    <p class="small" style="text-align:center">© Made by Amey Sawant &amp; Aapil Shaikh</p> 
+                    <p class="small" style="text-align:center">© Made by Amey Sawant</p> 
                 </div>
             </div>
         </div>
